Make tests work on both Java 16 and Java 17